# HONEI

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.bash  configure.ac  index.html  index.html.gh-orig  libtool-hack.in
cell/libgraph/: Makefile.am  node_distance_float.cc
cell/libla/: Makefile.am  banded_dense_float_matrix_vector_product.cc  dense_dense_float_difference.cc  dense_dense_float_dot_product.cc  dense_dense_float_element_product.cc  dense_dense_float_matrix_product.cc  dense_dense_float_matrix_vector_product.cc  dense_dense_float_scaled_sum.cc  dense_dense_float_sum.cc  dense_float_matrix_scale.cc  dense_float_norm_l_one.cc  dense_float_norm_l_two.cc  dense_float_norm_max.cc  dense_float_reduction_max.cc  dense_float_reduction_min.cc  dense_float_reduction_sum.cc  dense_float_scale.cc  dense_float_vector_reduction_sum.cc  dense_float_vector_scale.cc  dense_scalar_float_sum.cc  dense_sparse_float_sum.cc  difference_dense_dense_float.cc  dot_product_dense_dense_float.cc  element_inverse_float.cc  element_product_dense_dense_float.cc  float_element_inverse.cc  kernel.cc.in  norm_l_one_dense_float.cc  norm_l_two_dense_float.cc  norm_max_dense_float.cc  operations.hh  product_banded_matrix_dense_vector_float.cc  product_dense_matrix_dense_matrix_float.cc  product_dense_matrix_dense_vector_float.cc  reduction_max_dense_float.cc  reduction_min_dense_float.cc  reduction_sum_dense_float.cc  scale_dense_float.cc  scaled_sum_dense_dense_float.cc  sum_dense_dense_float.cc  (+2 more)
cell/libutil/: Makefile.am  allocator.cc  allocator.hh  debug.hh  operation_one_float_dma.cc  operation_one_float_mail.cc  operation_two_float_dma.cc  operation_two_float_mail.cc  operations.cc  operations.hh  transfer.cc  transfer.hh
clients/fortran/: Makefile.am  feat.f90  ftoh.cc
clients/io_convert/: Makefile.am  elltomtx.cc  elltospai.cc  exptodv.cc  mtoell.cc  mtxtoell.cc
clients/io_tools/: Makefile.am  ellexpand.cc  ellinfo.cc  elltogrote.cc  elltomtx.cc  elltosainv.cc  elltospai.cc  exptodv.cc  feasttodv.cc  feasttoell.cc  match_sainv.cc  minfo.cc  mtodv.cc  mtoell.cc  mtxinfo.cc  mtxtoell.cc
clients/lbm/: Makefile.am  honei_lbm.cc  honei_lbm.hh  honei_lbm_grid.cc  honei_lbm_grid.hh  scenario_controller.hh  scenario_controller_base.hh  scenario_controller_dat.hh  scenario_controller_grid.hh
clients/mg_opt/: Makefile.am  mg_opt.cc
clients/mpi/: Makefile.am  config  config-hyb  generate_tq  honei.tq  honei_mpi.cc  honei_mpi.hh  honei_mpi_pollutant.cc  honei_mpi_pollutant.hh  honei_mpi_ring.cc  honei_mpi_ring.hh  hyb.tq  ital.tq  job-torque.sh  mpi_test.cc  mpi_test.hh  slurm.sh
clients/norwegen/: Makefile.am  auto.p  autojpg.p  generate_autop  generate_tq  honei.tq  norwegen.cc
clients/poisson/: Makefile.am  README  honei-poisson  honei_poisson.cc  honei_poisson.hh  scenario_controller.hh  scenario_controller_base.hh
clients/poski/: Makefile.am  poski.cc
clients/qt/: Makefile.am  gl_widget.cc  gl_widget.hh  glwidget.cc  glwidget.hh  honei_qt.cc  main.cc  normal.hh  simulation.hh  simulation_controller.hh  vertex.hh  window.cc  window.hh
clients/spai/: Makefile.am  spai.cc
clients/swe/: Makefile.am  README  honei_swe.cc  honei_swe.hh  scenario_controller.hh
doc/: Makefile.am  authors.html.skel  doc_groups.doxygen  doxygen.conf  footer.html  grid.tex  header.html  header.tex.in  licence.html.skel  pg512.css  tutorial.tex
honei/: Makefile.am  attributes.hh  honeirc
honei/backends/: Makefile.am
honei/cell/: Makefile.am.m4  cell.hh  interface.hh  opcodes.hh  traits.hh  types.hh
honei/fem/: Makefile.am.m4  communication.hh  communication_TEST.cc  communication_error.cc  communication_error.hh  dense_data_wrapper.hh  files.m4  halo.hh  halo_TEST.cc  halo_data.hh  halo_data_TEST.cc  mesh.hh  mesh_TEST.cc  mesh_data.hh  mesh_data_TEST.cc  mesh_error.cc  mesh_error.hh  topology.hh  topology_TEST.cc
honei/graph/: Makefile.am.m4  abstract_graph.hh  bench.cc  breadth_first_search-mc.hh  breadth_first_search.hh  breadth_first_search_TEST.cc  evolving_animator.hh  evolving_graph.hh  evolving_graph_TEST.cc  files.m4  graph.hh  graph_TEST.cc  graph_error.cc  node.hh  (+11 more)
libla/: Makefile.am  Makefile.am.m4  absolute.cc  absolute.hh  absolute_TEST.cc  algorithm.hh  algorithm_TEST.cc  banded_matrix.hh  banded_matrix_TEST.cc  bench.cc  dense_matrix.hh  dense_matrix_TEST.cc  dense_matrix_tile.hh  dense_matrix_tile_TEST.cc  dense_vector-impl.hh  dense_vector.cc  dense_vector.hh  dense_vector_TEST.cc  dense_vector_base.hh  dense_vector_continuous_base.hh  dense_vector_range-impl.hh  dense_vector_range.cc  dense_vector_range.hh  dense_vector_range_TEST.cc  dense_vector_slice-impl.hh  dense_vector_slice.cc  dense_vector_slice.hh  dense_vector_slice_TEST.cc  diagonal_matrix.hh  difference-cell.cc  difference-mc.hh  difference-sse.cc  difference.hh  difference_TEST.cc  dot_product-cell.cc  dot_product-mc.hh  dot_product-sse.cc  dot_product.cc  dot_product.hh  dot_product_BENCHMARK.cc  (+135 more)
libutil/: Makefile.am  Makefile.am.m4  assertion.cc  assertion.hh  assertion_TEST.cc  cell.hh  cell_opcodes.hh  condition_variable.cc  condition_variable.hh  configuration.cc  configuration.hh  configuration_TEST.cc  exception.cc  exception.hh  files.m4  hdf5.cc  hdf5.hh  hdf5_TEST.cc  lock.cc  lock.hh  log.cc  log.hh  memory_backend.cc  memory_backend.hh  memory_backend_cell.cc  memory_backend_cell.hh  memory_backend_cell_TEST.cc  memory_backend_gpu.cc  memory_backend_gpu.hh  memory_manager.cc  memory_manager.hh  memory_manager_TEST.cc  mutex.cc  mutex.hh  pool_task.hh  pool_task_TEST.cc  pool_thread.cc  pool_thread.hh  pool_thread_TEST.cc  shared_array-impl.hh  (+40 more)
unittest/: BasisTest.hh  BlasTest.cpp  BlasTest.hh  LiblaTest.cpp  LiblaTest.hh  Main.cpp  Makefile  Makefile.am  Unittest.cpp  basetest.hh  blastest.cc  blastest.hh  liblatest.cc  liblatest.hh  run-cell.sh  run-mc.sh  run-sse.sh  run.sh  run_quick-cell.sh  run_quick-mc.sh  run_quick-sse.sh  run_quick.sh  testdispatcher.cc  testdispatcher.hh  testfactory.cc  testfactory.hh  tests.hh  unittest.cc  unittest.hh  unittest_TEST.cc  unittest_test.cc
(+2619 files in other folders)
