CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in

lib_LTLIBRARIES = libla.la

libla_la_SOURCES = \
	element_iterator.hh \
	scalar_product.hh \
	tags.hh \
	vector.hh
libla_la_LIBADD = \
	$(top_builddir)/libutil/libutil.la

pg512_includedir = $(includedir)/pg512/
pg512_include_HEADERS = \
	element_iterator.hh \
	scalar_product.hh \
	tags.hh \
	vector.hh
