CLEANFILES = *~

MAINTAINERCLEANFILES = Makefile.in

lib_LTLIBRARIES = libutil.la

libutil_la_SOURCES = \
	exception.cc exception.hh \
	shared_array.cc shared_array.hh \
	stringify.hh

pg512_libutil_includedir = $(includedir)/pg512/libutil
pg512_libutil_include_HEADERS = \
	exception.hh \
	shared_array.hh \
	stringify.hh
